--- a/Arquivos/Modulo_02/Desafios/d010/Projeto-Android/index.html
+++ b/Arquivos/Modulo_02/Desafios/d010/Projeto-Android/index.html
@@ -29,8 +29,7 @@
     <nav id="menu">
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contatos</a>
     </nav>
     
     <main>
