Finalizei 2 exercícios e iniciei o desafio 12

--- a/exercicios/modulo-03/ex022/fundo006.html
+++ b/exercicios/modulo-03/ex022/fundo006.html
@@ -12,6 +12,7 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
         main {
             background-color: white;
@@ -28,6 +29,17 @@
         <h1>Teste de imagem de fundo</h1>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quod excepturi corrupti asperiores odio tempora fugit, modi, nemo rem non sint laborum necessitatibus? Rem, sed corporis laboriosam voluptas architecto illum.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sunt, rem a, ipsum quasi molestiae reprehenderit error incidunt voluptates enim praesentium ex? Fuga, earum tempora id ut ullam ratione tenetur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde nisi dicta. Quo, exercitationem temporibus praesentium maxime dignissimos esse! Deleniti dignissimos earum facilis aspernatur voluptatum, molestiae fugiat qui tenetur eligendi!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quod excepturi corrupti asperiores odio tempora fugit, modi, nemo rem non sint laborum necessitatibus? Rem, sed corporis laboriosam voluptas architecto illum.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sunt, rem a, ipsum quasi molestiae reprehenderit error incidunt voluptates enim praesentium ex? Fuga, earum tempora id ut ullam ratione tenetur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde nisi dicta. Quo, exercitationem temporibus praesentium maxime dignissimos esse! Deleniti dignissimos earum facilis aspernatur voluptatum, molestiae fugiat qui tenetur eligendi!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quod excepturi corrupti asperiores odio tempora fugit, modi, nemo rem non sint laborum necessitatibus? Rem, sed corporis laboriosam voluptas architecto illum.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sunt, rem a, ipsum quasi molestiae reprehenderit error incidunt voluptates enim praesentium ex? Fuga, earum tempora id ut ullam ratione tenetur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde nisi dicta. Quo, exercitationem temporibus praesentium maxime dignissimos esse! Deleniti dignissimos earum facilis aspernatur voluptatum, molestiae fugiat qui tenetur eligendi!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quod excepturi corrupti asperiores odio tempora fugit, modi, nemo rem non sint laborum necessitatibus? Rem, sed corporis laboriosam voluptas architecto illum.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sunt, rem a, ipsum quasi molestiae reprehenderit error incidunt voluptates enim praesentium ex? Fuga, earum tempora id ut ullam ratione tenetur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde nisi dicta. Quo, exercitationem temporibus praesentium maxime dignissimos esse! Deleniti dignissimos earum facilis aspernatur voluptatum, molestiae fugiat qui tenetur eligendi!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quod excepturi corrupti asperiores odio tempora fugit, modi, nemo rem non sint laborum necessitatibus? Rem, sed corporis laboriosam voluptas architecto illum.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sunt, rem a, ipsum quasi molestiae reprehenderit error incidunt voluptates enim praesentium ex? Fuga, earum tempora id ut ullam ratione tenetur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde nisi dicta. Quo, exercitationem temporibus praesentium maxime dignissimos esse! Deleniti dignissimos earum facilis aspernatur voluptatum, molestiae fugiat qui tenetur eligendi!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quod excepturi corrupti asperiores odio tempora fugit, modi, nemo rem non sint laborum necessitatibus? Rem, sed corporis laboriosam voluptas architecto illum.
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sunt, rem a, ipsum quasi molestiae reprehenderit error incidunt voluptates enim praesentium ex? Fuga, earum tempora id ut ullam ratione tenetur.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde nisi dicta. Quo, exercitationem temporibus praesentium maxime dignissimos esse! Deleniti dignissimos earum facilis aspernatur voluptatum, molestiae fugiat qui tenetur eligendi!
         </p>
