--- a/exercicios/modulo-03/ex024/iframe002.html
+++ b/exercicios/modulo-03/ex024/iframe002.html
@@ -24,7 +24,7 @@
       voluptate quod!
     </p>
 
-    <iframe src="pag001.html" frameborder="1" style="height: 500px"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="1" style="height: 500px"><p>Seu navegador não é compativel</p></iframe>
 
     <p>
       Veritatis, deserunt. Impedit explicabo labore ratione nobis repudiandae
