--- a/exercicios/modulo-03/ex024/iframe003.html
+++ b/exercicios/modulo-03/ex024/iframe003.html
@@ -33,7 +33,7 @@
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti, placeat quam ea deleniti, neque illum obcaecati mollitia magnam consectetur veniam error pariatur at nesciunt ad non? Dolorem, ipsam nemo?Tenetur quam quibusdam accusamus maiores excepturi molestias hic fugiat possimus ad sunt beatae, enim deleniti debitis rem id eius aperiam nisi nemo! Pariatur, expedita nihil! Necessitatibus earum fugit in harum!</p>
 
-  <iframe src="" name="frame">
+  <iframe title="iframe" src="" name="frame">
     <p>Seu navegador não é compátivel!</p>
   </iframe>
 
