--- a/exercicios/modulo-03/ex024/paginas-extras/pag003.html
+++ b/exercicios/modulo-03/ex024/paginas-extras/pag003.html
@@ -10,10 +10,24 @@
       background-color: rgb(255, 187, 70);
       color: rgb(30, 8, 177);
     }
+    h1{
+      text-align: center;
+    }
+    div#img-center{
+      display: flex;
+      justify-content: center;
+    }
+    div#img-center img {
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
-  <h1 style="text-align: center;" >Página de exemplo</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas maxime quam magnam, voluptatem, sequi ipsum veniam voluptatum sed eaque quas nostrum reiciendis deserunt perferendis, exercitationem temporibus! Mollitia odit.<br><div style="display: flex;justify-content: center;"><img style="border-radius: 10px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRw2LIAtJgSPhbDOKe5Sx3nwnzQru7opqj7ZA&s" alt="Pokemon Lendário"></div><br>Numquam vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium reprehenderit ea tempora, vel nesciunt, asperiores suscipit illo eveniet minima?</p>
+  <h1>Página de exemplo</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas maxime quam magnam, voluptatem, sequi ipsum veniam voluptatum sed eaque quas nostrum reiciendis deserunt perferendis, exercitationem temporibus! Mollitia odit.<br>
+
+  <div id="img-center"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRw2LIAtJgSPhbDOKe5Sx3nwnzQru7opqj7ZA&s" alt="Pokemon Lendário"></div>
+  
+  <br>Numquam vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium reprehenderit ea tempora, vel nesciunt, asperiores suscipit illo eveniet minima?</p>
 </body>
 </html>
