--- a/exercicios/modulo-03/ex024/iframe001.html
+++ b/exercicios/modulo-03/ex024/iframe001.html
@@ -9,14 +9,14 @@
     <h1>Testando o uso de um idframe</h1>
     <p>
       Acessando o site do
-      <iframe src="https://www.cursoemvideo.com" frameborder="1">
+      <iframe title="iframe" src="https://www.cursoemvideo.com" frameborder="1">
         <a href="https://www.cursomvideo.com"> Curso Em Vídeo </a>
       </iframe>
       para aprender a programar
     </p>
     <p>
       O repositorio do Weslley Richard
-      <iframe src="https://github.com/weslleyrichardi" frameborder="1">
+      <iframe title="iframe" src="https://github.com/weslleyrichardi" frameborder="1">
         <a href="https://github.com/weslleyrichardi"> (dev.weslleyrichardi) </a>
       </iframe>
       também é legal!
