--- a/exercicios/modulo-03/ex024/iframe002.html
+++ b/exercicios/modulo-03/ex024/iframe002.html
@@ -12,6 +12,7 @@
         display: block;
         margin: auto;
         width: 300px;
+        height: 500px
       }
     </style>
   </head>
@@ -24,7 +25,7 @@
       voluptate quod!
     </p>
 
-    <iframe src="paginas-extras/pag001.html" frameborder="1" style="height: 500px"><p>Seu navegador não é compativel</p></iframe>
+    <iframe title="iframe" src="paginas-extras/pag001.html" frameborder="1"><p>Seu navegador não é compativel</p></iframe>
 
     <p>
       Veritatis, deserunt. Impedit explicabo labore ratione nobis repudiandae
