--- a/exercicios/modulo-03/ex026/mq003/index.html
+++ b/exercicios/modulo-03/ex026/mq003/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Media Query</title>
+    <title>Mídia Query</title>
     <link rel="stylesheet" href="stilos/style.css">
   </head>
   <body>
