--- a/exercicios/modulo-03/ex026/mq005/index.html
+++ b/exercicios/modulo-03/ex026/mq005/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Media Query</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
   <header>
     <h1>Meu site</h1>
-    <menu>
+    <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
+    <menu id="itens">
       <ul>
         <li><a href="#">Opção1</a></li>
         <li><a href="#">Opção2</a></li>
@@ -42,5 +44,17 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reorro laborum ut, mollitia laboriosam.</p><br>
     </article>
   </main>
+
+  <script>
+    function clickMenu() {
+      if (itens.style.display == 'block') {
+        itens.style.display = 'none'
+      }
+      else {
+        itens.style.display = 'block'
+
+      }
+    }
+  </script>
 </body>
 </html>
